--- a/src/NodeEditorAvalonia/Themes/Controls/EllipsePin.axaml
+++ b/src/NodeEditorAvalonia/Themes/Controls/EllipsePin.axaml
@@ -14,16 +14,17 @@
 
     <Setter Property="Template">
       <ControlTemplate x:DataType="m:IPin">
-        <Ellipse Name="PART_Pin"
+        <!--<Ellipse Name="PART_Pin"
                  Width="{Binding Width}"
-                 Height="{Binding Height}" />
+                 Height="{Binding Height}" />-->
+        <Rectangle Name="PART_Pin" Width="{Binding Width}" Height="{Binding Height}"/>
+
       </ControlTemplate>
     </Setter>
 
     <Setter Property="(ToolTip.Tip)">
       <Template>
-        <TextBlock Text="{Binding Name}" 
-                   x:DataType="m:IPin" />
+        <TextBlock Text="{Binding Name}" x:DataType="m:IPin" />
       </Template>
     </Setter>
 
@@ -59,17 +60,30 @@
       </Setter.Value>
     </Setter>
 
-    <Style Selector="^/template/ Ellipse#PART_Pin">
+    <Style Selector="^/template/Ellipse#PART_Pin">
       <Setter Property="Fill" Value="{DynamicResource PinBackgroundBrush}" />
       <Setter Property="Stroke" Value="{DynamicResource PinForegroundBrush}" />
       <Setter Property="StrokeThickness" Value="2" />
     </Style>
 
-    <Style Selector="^:pointerover /template/ Ellipse#PART_Pin">
+    <Style Selector="^/template/Rectangle#PART_Pin">
+      <Setter Property="Fill" Value="{DynamicResource PinBackgroundBrush}" />
+      <Setter Property="Stroke" Value="{DynamicResource PinForegroundBrush}" />
+      <Setter Property="StrokeThickness" Value="2" />
+    </Style>
+
+    <Style Selector="^:pointerover /template/Ellipse#PART_Pin">
       <Setter Property="Fill" Value="{DynamicResource PinPointerOverBackgroundBrush}" />
       <Setter Property="Stroke" Value="{DynamicResource PinPointerOverForegroundBrush}" />
       <Setter Property="StrokeThickness" Value="2" />
     </Style>
 
+
+    <Style Selector="^:pointerover /template/Rectangle#PART_Pin">
+      <Setter Property="Fill" Value="{DynamicResource PinPointerOverBackgroundBrush}" />
+      <Setter Property="Stroke" Value="{DynamicResource PinPointerOverForegroundBrush}" />
+      <Setter Property="StrokeThickness" Value="2" />
+    </Style>
+    
   </ControlTheme>
 </ResourceDictionary>
